<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_photos">

    <fragment
        android:id="@+id/navigation_photos"
        android:name="com.salmanseifian.plash.features.photos.PhotosFragment"
        android:label="@string/title_photos"
        tools:layout="@layout/fragment_photos">
        <action
            android:id="@+id/action_navigation_photos_to_singlePhotoFragment"
            app:destination="@id/singlePhotoFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.salmanseifian.plash.features.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_collections"
        android:name="com.salmanseifian.plash.features.collections.CollectionsFragment"
        android:label="@string/title_collections"
        tools:layout="@layout/fragment_collections" />
    <fragment
        android:id="@+id/singlePhotoFragment"
        android:name="com.salmanseifian.plash.features.singlephoto.SinglePhotoFragment"
        android:label="SinglePhotoFragment">

        <argument
            android:name="photoId"
            app:argType="string" />
        <action
            android:id="@+id/action_singlePhotoFragment_to_moreDialog"
            app:destination="@id/moreDialog" />
    </fragment>
    <dialog
        android:id="@+id/moreDialog"
        android:name="com.salmanseifian.plash.features.singlephoto.MoreDialog"
        android:label="MoreDialog" />
</navigation>
